@@ -9,6 +9,7 @@ portage-2.1.3
 * Add ** as new token for package.keywords to bypass the keyword visibility layer
 * Namespace sanitizing: move all portage related code into portage.* namespace,
   rename portage_foo modules to portage.foo (but keep symlinks for compability)
+* Add license visibility filtering (GLEP 23)
 
 portage-2.1.2
 -------------
